# language_of_businessWS23

./: .gitignore  README.md  app.py  app1.py  app_jing.py  data_retrival.ipynb  data_retrival.py  demo.py  dupont-financial-analysis-coke-vs-pepsi.pptx  financial_dashboard.py  financial_metrics_making_cheng.ipynb  financial_metrics_making_cheng2.ipynb  form10k_inone.xlsx  mvp.ipynb  note.md  pyproject.toml  sandbox.ipynb  streamlit_app.py  test.py
