[tool.poetry]
name = "fin-dashboard"
version = "0.1.0"
description = ""
authors = ["Alexander Moshchev <118296062+moshchev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.3"
yfinance = "^0.2.32"
numpy = "^1.26.2"
plotly = "^5.18.0"
streamlit = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
